tests/parser/bad/exps/exp_t-match-spid-with-bar-underscore-arrow-hexlit-with.scilexp
let a = True in
match a with
| _ => True
